fix:refactorizacion de codigo back